--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 appnope==0.1.3
 asttokens==2.2.1
 backcall==0.2.0
+cloudpickle==3.0.0
 contourpy==1.1.0
 cvxopt==1.3.2
 cycler==0.11.0
 decorator==5.1.1
 deprecation==2.1.0
 executing==1.2.0
+Farama-Notifications==0.0.4
+filelock==3.13.1
 fonttools==4.42.1
+fsspec==2023.10.0
 graphviz==0.20.1
+gymnasium==0.29.1
 intervaltree==3.1.0
 ipython==8.14.0
 jedi==0.19.0
@@ -40,17 +45,21 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2023.3
 pyvis==0.3.2
+sb3-contrib==2.1.0
 scikit-learn==1.2.1
 scipy==1.11.2
 simpy==4.0.1
 six==1.16.0
 sortedcontainers==2.4.0
+stable-baselines3==2.1.0
 stack-data==0.6.2
 statsmodels==0.14.0
 StringDist==1.0.9
 sympy==1.12
 threadpoolctl==3.2.0
+torch==2.1.0
 tqdm==4.66.1
 traitlets==5.9.0
+typing_extensions==4.8.0
 tzdata==2023.3
 wcwidth==0.2.6
