Added evaluate loop for DRL models

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,7 @@ tmp/
 __pycache__/
 baseline/__pycache__/
 output/
+output_no_postpone/
+output_postpone/
 test.py
 example/BPI_Challenge_2017_W_Two_TS/BPI_Challenge_2017_W_Two_TS.xes
